--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,12 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "fresh/doctrine-enum-bundle": "^6.3",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
+        "symfony/orm-pack": "^1.0",
         "symfony/yaml": "4.2.*"
     },
     "config": {
