--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ APP_SECRET=dd9da6d72047ac26e1f764a6ce85e2f6
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://art11:art11@mysql:3306/art11
 ###< doctrine/doctrine-bundle ###
