--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,15 @@
         "ext-iconv": "*",
         "fresh/doctrine-enum-bundle": "^6.3",
         "jms/serializer-bundle": "^3.2",
+        "sonata-project/admin-bundle": "^3.48",
+        "sonata-project/doctrine-orm-admin-bundle": "^3.8",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
         "symfony/orm-pack": "^1.0",
+        "symfony/twig-bundle": "4.2.*",
         "symfony/yaml": "4.2.*"
     },
     "config": {
