--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
         "symfony/orm-pack": "^1.0",
-        "symfony/twig-bundle": "4.2.*",
-        "symfony/yaml": "4.2.*"
+        "symfony/twig-bundle": "^4.2",
+        "symfony/yaml": "4.2.*",
+        "twig/twig": "^2.7"
     },
     "config": {
         "preferred-install": {
