--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,3 +26,10 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    admin.list_item:
+        class: App\Admin\ListItemAdmin
+        arguments: [~, App\Entity\ListItem, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, group: admin, label: ListItem }
+        public: true
