--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "fresh/doctrine-enum-bundle": "^6.3",
         "jms/serializer-bundle": "^3.2",
+        "maltehuebner/impress-bundle": "dev-master",
         "sonata-project/admin-bundle": "^3.48",
         "sonata-project/doctrine-orm-admin-bundle": "^3.8",
         "symfony/apache-pack": "^1.0",
